--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias0"></p>
-                            <p class="contador-digito-texto">dias</p>
+                            <p class="contador-digito-texto">30 dias</p>
                         </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="horas0"></p>
@@ -61,6 +61,10 @@
                             <p class="contador-digito-numero" id="seg1"></p>
                             <p class="contador-digito-texto">seg</p>
                         </div>
+                        Name		
+                        Latest commit
+                        ￼
+                        dadp
                     </div>
                 </div>
                 <div class="aba-conteudo">
