--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="dias0"></p>
-                            <p class="contador-digito-texto">30 dias</p>
+                            <p class="contador-digito-numero" id=>60</p>
+                            <p class="contador-digito-texto">dias</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="horas0"></p>
+                            <p class="contador-digito-numero" id=>48</p>
                             <p class="contador-digito-texto">horas</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="min0"></p>
+                            <p class="contador-digito-numero" id=>60</p>
                             <p class="contador-digito-texto">min</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="seg0"></p>
+                            <p class="contador-digito-numero" id=>300</p>
                             <p class="contador-digito-texto">seg</p>
                         </div>
                     </div>
@@ -46,24 +46,24 @@
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="dias1"></p>
+                            <p class="contador-digito-numero" id=>30</p>
                             <p class="contador-digito-texto">dias</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="horas1"></p>
+                            <p class="contador-digito-numero" id=>30</p>
                             <p class="contador-digito-texto">horas</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="min1"></p>
+                            <p class="contador-digito-numero" id=>30</p>
                             <p class="contador-digito-texto">min</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="seg1"></p>
-                            <p class="contador-digito-texto">seg</p>
+                            <p class="contador-digito-numero" id=>30</p>
+                            <p class="contador-digito-texto">seg</p>60
                         </div>
                         Name		
                         Latest commit
-                        ￼
+                         
                         dadp
                     </div>
                 </div>
@@ -72,21 +72,21 @@
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="dias2"></p>
+                            <p class="contador-digito-numero" id=>30</p>
                             <p class="contador-digito-texto">dias</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="horas2"></p>
+                            <p class="contador-digito-numero" id=>40</p>
                             <p class="contador-digito-texto">horas</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="min2"></p>
+                            <p class="contador-digito-numero" id=>20</p>
                             <p class="contador-digito-texto">min</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="seg2"></p>
+                            <p class="contador-digito-numero" id=>24</p>
                             <p class="contador-digito-texto">seg</p>
-                        </div>
+                        </div>b
                     </div>
                 </div>
                 <div class="aba-conteudo">
@@ -94,19 +94,19 @@
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="dias3"></p>
+                            <p class="contador-digito-numero" id=>50</p>
                             <p class="contador-digito-texto">dias</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="horas3"></p>
+                            <p class="contador-digito-numero" id=>30</p>
                             <p class="contador-digito-texto">horas</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="min3"></p>
+                            <p class="contador-digito-numero" id=>5</p>
                             <p class="contador-digito-texto">min</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="seg3"></p>
+                            <p class="contador-digito-numero" id=>9</p>
                             <p class="contador-digito-texto">seg</p>
                         </div>
                     </div>
